[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/Themes/day_theme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/DialogBox.gd" type="Script" id=2]
[ext_resource path="res://GUI/Themes/Fonts/Dancing_Script/DancingScript-32.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/audio/QuillOnPaper.wav" type="AudioStream" id=4]

[node name="DialogBox" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 400 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="DialogTextBox" type="RichTextLabel" parent="MarginContainer"]
margin_right = 580.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )

[node name="LetterTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="KeypressNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0
bus = "SoundFX"

[connection signal="gui_input" from="." to="." method="_on_DialogBox_gui_input"]
[connection signal="gui_input" from="MarginContainer/DialogTextBox" to="." method="_on_DialogTextBox_gui_input"]
